src/components/issues-momentum.scss
@import "../styles/_custom.scss";
@import "../styles/index.scss";

.momentum {
  .momentum-tab-wrap {
    padding-bottom: 0;
  }

  .momentum-tab {
    background: $rust;
    border-radius: 4px 4px 0 0;
    
    a {
      border-radius: 4px 4px 0 0;
      color: white;

      h4 {
        margin-bottom: 0;
      }
    }

    a.active {
      background: $dark;
    }
  }

  .momentum-pane {
    background: $dark;
    color: white;
    box-sizing: border-box;

    .article-list {
      .article-item {
        position: relative;
        display: flex;
        flex-direction: column;
        min-height: 120px;
        z-index: 2;
        margin-bottom: 16px;
        background: $dark url('http://source.unsplash.com/random/800x600') no-repeat center;
        background-size: cover;
        @include transition-300;
        
        &:last-of-type {
          margin-bottom: 0;
        }
        
        &:before {
          content: "";
          background: linear-gradient(90deg,rgba(0,0,0,0.85),rgba(0,0,0,0.5));
          position: absolute;
          height: 100%;
          width: 100%;
          top: 0;
          left: 0;
          right: 0;
          bottom: 0;
          z-index: -1;
        }

        &:hover {
          transform: scale(1.04);
          
          &:before {
            background: linear-gradient(90deg,rgba(0,0,0,0.85),rgba(0,0,0,0.85));
          }
        }
      }

      .article-heading {
        display: flex;
        flex: 1;
        color: white !important;

        &.active {
          border: 4px solid $pink;
        }
      }
    }

    .article-preview {
      min-width: 45%;

      .article-card {
        background: #ffffff;
        color: $dark;
        margin-top: 1.5rem;

        .article-header {
          background: $pink;
          display: flex;
          padding: 1rem;
          font-weight: bold;
          text-transform: italic;
          justify-content: space-between;
        }

        .article-body {
          padding: 1rem;
        }
      }
    }
  }
}

// Responsive Design for Tabs
.article-pagination {
  display: none;
  width: 100%;

  .article-page {
    display: inline-block;

    .article-page-num {
      color: $pink;

      &.active {
        color: $light;
      }
    }
  }

  
}

@media screen and (max-width: 768px) { // Breakpoint: md
  .article-list {
    display: none;
  }

  .article-pagination {
    display: flex;
  }

  .article-card {
    margin-top: 0;
  }
}

